--- a/.github/workflows/ml-pipeline.yml
+++ b/.github/workflows/ml-pipeline.yml
@@ -7,25 +7,26 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: '3.8'
     
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install torch torchvision pytest
+        pip install torch==2.2.0+cpu torchvision==0.17.0+cpu -f https://download.pytorch.org/whl/cpu/torch_stable.html
+        pip install pytest tqdm
     
     - name: Train model
       run: |
-        python train.py
+        PYTHONPATH=$PYTHONPATH:$(pwd) python train.py
     
     - name: Run tests
       run: |
-        pytest tests/
+        PYTHONPATH=$PYTHONPATH:$(pwd) pytest tests/
     
     - name: Upload trained model
       uses: actions/upload-artifact@v3
