--- a/.github/workflows/ml-pipeline.yml
+++ b/.github/workflows/ml-pipeline.yml
@@ -18,7 +18,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install torch==2.2.0+cpu torchvision==0.17.0+cpu -f https://download.pytorch.org/whl/cpu/torch_stable.html
-        pip install pytest tqdm
+        pip install pytest tqdm matplotlib
     
     - name: Train model
       run: |
@@ -32,4 +32,10 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: trained-model
-        path: models/ 
+        path: models/
+        
+    - name: Upload augmentation examples
+      uses: actions/upload-artifact@v3
+      with:
+        name: augmentation-examples
+        path: visualization/
