--- a/.github/workflows/ml-pipeline.yml
+++ b/.github/workflows/ml-pipeline.yml
@@ -18,7 +18,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install torch==2.2.0+cpu torchvision==0.17.0+cpu -f https://download.pytorch.org/whl/cpu/torch_stable.html
-        pip install pytest tqdm matplotlib
+        pip install pytest tqdm matplotlib pytest-html
     
     - name: Train model
       run: |
@@ -26,7 +26,7 @@ jobs:
     
     - name: Run tests
       run: |
-        PYTHONPATH=$PYTHONPATH:$(pwd) pytest tests/
+        PYTHONPATH=$PYTHONPATH:$(pwd) pytest tests/ -v --html=test-results.html --self-contained-html
     
     - name: Upload trained model
       uses: actions/upload-artifact@v3
@@ -39,3 +39,9 @@ jobs:
       with:
         name: augmentation-examples
         path: visualization/
+        
+    - name: Upload test results
+      uses: actions/upload-artifact@v3
+      with:
+        name: test-results
+        path: test-results.html
