--- a/.github/workflows/ml-pipeline.yml
+++ b/.github/workflows/ml-pipeline.yml
@@ -18,7 +18,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install torch==2.2.0+cpu torchvision==0.17.0+cpu -f https://download.pytorch.org/whl/cpu/torch_stable.html
-        pip install pytest tqdm matplotlib pytest-html psutil pytest-md
+        pip install pytest tqdm matplotlib pytest-html psutil
     
     - name: Train model
       run: |
@@ -27,7 +27,7 @@ jobs:
     - name: Run tests
       run: |
         echo "## Test Results" >> $GITHUB_STEP_SUMMARY
-        PYTHONPATH=$PYTHONPATH:$(pwd) pytest tests/ -v --html=test-results.html --self-contained-html --md-report >> $GITHUB_STEP_SUMMARY
+        PYTHONPATH=$PYTHONPATH:$(pwd) pytest tests/ -v --html=test-results.html --self-contained-html | tee -a $GITHUB_STEP_SUMMARY
     
     - name: Display Memory Usage
       run: |
@@ -54,6 +54,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: test-results
-        path: |
-          test-results.html
-          .pytest_cache/md-report.md
+        path: test-results.html
